--- a/index.html
+++ b/index.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spoon</title>
-    <link rel="stylesheet" href="css/main.css++">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    
+    <div class="wrapper">
+        <!-- секция grettings -->
+        <section class="grettings">
+            <div class="container">
+                <header class="header">
+                    <div class="logo">
+                        <a href="index.html">
+                            <img src="img/grettings/Vector.svg" alt="логотип">
+                        </a>
+                    </div>
+
+                <nav class="nav">
+                        <ul class="nav__list">
+                            <li class="nav__item">Features</li>
+                            <li class="nav__item">Premium</li>
+                            <li class="nav__item">Pricing</li>
+                            <li class="nav__item">About</li>
+                            <li class="nav__item nav__item_square"></li>
+                            <li class="nav__item">Sign in</li>
+                            <li class="nav__item">Get Started</li>
+                        </ul>
+                    </nav>
+                </header>
+                <div class="desk">
+                    <div class="desk__title">Propel your business.</div>
+                    <div class="desk__text">Propel comes with everything you need to get your business rolling.</div>
+                    <button class="btn desk__btn">Get Started</button>
+                </div>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
