--- a/index.html
+++ b/index.html
@@ -37,6 +37,35 @@
                 </div>
             </div>
         </section>
+
+        <!--секция services-->
+        <section class="services">
+            <div class="container">
+                <div class="services__content">
+                    <div class="services__main-text main-text"><span>Promoting your business and services with Propel:</span>
+                        A responsive, multi-page business template with everything
+                        you need propel your business.</div>
+
+                        <ul class="services__list">
+                            <li class="services__item">
+                                <img src="img/IMAGE.svg" alt="иконка 1">
+                                <div class="services__title">Pro ad constituto</div>
+                                <div class="service__text">Ne usu illud albucius abhor reant, partiendo scriptorem mel ne.</div>
+                            </li>
+                            <li class="services__item">
+                                <img src="img/IMAGE (1).svg" alt="иконка 2">
+                                <div class="services__title">Eam commodo</div>
+                                <div class="service__text">Fuisset intellegat delicatissimi ex mea. Cu probo integre nec.</div>
+                            </li>
+                            <li class="services__item">
+                                <img src="img/IMAGE (2).svg" alt="иконка 3">
+                                <div class="services__title">Reformidans eis</div>
+                                <div class="service__text">Facer nostro causae ei sed. Vix ex quidam detraxit, vis ad nostro laoreet.</div>
+                            </li>
+                        </ul>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 </html>
