--- a/index.html
+++ b/index.html
@@ -48,21 +48,33 @@
 
                         <ul class="services__list">
                             <li class="services__item">
-                                <img src="img/IMAGE.svg" alt="иконка 1">
+                                <img src="img/services/IMAGE.svg" alt="иконка 1">
                                 <div class="services__title">Pro ad constituto</div>
                                 <div class="service__text">Ne usu illud albucius abhor reant, partiendo scriptorem mel ne.</div>
                             </li>
                             <li class="services__item">
-                                <img src="img/IMAGE (1).svg" alt="иконка 2">
+                                <img src="img/services/IMAGE (1).svg" alt="иконка 2">
                                 <div class="services__title">Eam commodo</div>
                                 <div class="service__text">Fuisset intellegat delicatissimi ex mea. Cu probo integre nec.</div>
                             </li>
                             <li class="services__item">
-                                <img src="img/IMAGE (2).svg" alt="иконка 3">
+                                <img src="img/services/IMAGE (2).svg" alt="иконка 3">
                                 <div class="services__title">Reformidans eis</div>
                                 <div class="service__text">Facer nostro causae ei sed. Vix ex quidam detraxit, vis ad nostro laoreet.</div>
                             </li>
                         </ul>
+                </div>
+            </div>
+        </section>
+
+        <!-- секция advert -->
+        <section class="advert">
+            <div class="advert__container">
+                <img src="img/advert/IMAGE (1).png" alt="картинка">
+            </div>
+            <div class="container">
+                <div class="advert__contant">
+                    
                 </div>
             </div>
         </section>
