--- a/index.html
+++ b/index.html
@@ -74,7 +74,54 @@
             </div>
             <div class="container">
                 <div class="advert__contant">
-                    
+                    <div class="advert__main-text main-text"><span>Illud decore voluptaria has at.</span>
+                        Hinc invenire atomorum no vel. Ut vis nullam blandit neglegentur, omittam perpetua voluptatum qui eu. Iusto laoreet suscipit vis ad, ad ferri tempor duo.</div>
+                        <a href="#" class="link advert__link">More About Us</a>
+                </div>
+            </div>
+        </section>
+
+        <!-- секция offers -->
+        <section class="offers">
+            <div class="container">
+                <ul class="offers__list">
+                    <!-- 1 карточка -->
+                    <li class="offers__card">
+                        <img src="img/offers/pic1.png" alt="">
+                        <div class="offers__block">
+                            <div class="advert__main-text main-text">
+                                <span>Ex tempor euismod sapientem ouis lexor pro.</span>
+                                Ad vix dicta iudico singulis, ius ex mollis veritus.
+                            </div>
+                            <div class="offers__text">
+                                Possit tritani consectetuer eu his,
+                                 nusquam minimum ut per, eu eos ocurreret splendide hendrerit. Dicant placerat
+                                democritum eos id, sit mollis invidunt mediocritatem ei, ne fuisset dolores periculis sed.
+                            </div>
+                        </div>
+                    </li>
+                    <!-- 2 карточка -->
+                    <li class="offers__card">
+                        <div class="offers__block">
+                            <div class="offers__main-text main-text">
+                                <span>Te elit antiopam vix zril recusabo ut pri.</span>
+                                Quas suscipit ad mea verear vivendo tincidunt.
+                            </div>
+                            <div class="offers__text">
+                                Pri cu dico labores officiis, odio principes complectitur ad sea. 
+                                Sea id doctus forensibus, nec lorem vocent aliquam eu. Aliquid definitiones id cum, ad meliore perpetua referrentur sed. 
+                                Quas suscipit ad mea verear vivendo tincidunt.
+                            </div>
+                        </div>
+                        <img src="img/offers/pic2.png" alt="">
+                    </li>
+                </ul>
+
+                <div class="offers__info">
+                    <div class="offers__info-text">
+                        Wanna know more about the Premium deal?
+                    </div>
+                    <a href="#" class="link offers__link">See the full range of Premium</a>
                 </div>
             </div>
         </section>
