--- a/index.html
+++ b/index.html
@@ -125,6 +125,70 @@
                 </div>
             </div>
         </section>
+
+        <!-- секция party -->
+         <section class="party">
+            <div class="container">
+                <div class="party__content">
+                    <div class="party__info">
+                        <div class="party__text">Party On</div>
+                        <div class="main-text party__main-text">
+                            <span>Quas suscipit ad mea.</span>
+                            Pri cu dico labores 
+                            officiis odio principes complectitur ad sea.</div>
+                    </div>
+                    <div class="party__block-btn"><button class="btn party__btn">Get Started</button></div>
+                </div>
+            </div>
+         </section>
+
+         <!-- footer  -->
+         <footer class="footer">
+            <div class="container">
+                <div class="footer__content">
+                    <div class="footer__info">
+                        <div class="logo">
+                            <a href="index.html">
+                                <img src="img/grettings/Vector.svg" alt="логотип">
+                            </a>
+                        </div>
+                        <div class="footer__text">
+                            © 2018 Spoon Inc, All rights reserved. 
+                        </div>
+                    </div>
+
+                    <nav class="footer__nav">
+                        <ul class="footer__list">
+                            <div class="footer__column">
+                                <li class="footer__item"><a href="#">Features</a></li>
+                                <li class="footer__item"><a href="#">Premium</a></li>
+                                <li class="footer__item"><a href="#">Pricing</a></li>
+                            </div>
+
+                            <div class="footer__column">
+                                <li class="footer__item"><a href="#">About</a></li>
+                                <li class="footer__item"><a href="#">Blog</a></li>
+                                <li class="footer__item"><a href="#">Contact</a></li>
+                            </div>
+
+                            <div class="footer__column">
+                                <li class="footer__item"><a href="#">Image License Info</a></li>
+                                <li class="footer__item"><a href="#">Powered by Webflow</a></li>
+                            </div>
+
+                        </ul>
+
+                        <div class="footer__social">
+                            <a href="#" class="footer__link"><img src="img/footer/IMAGE (4).svg" alt="1"></a>
+                            <a href="#" class="footer__link"><img src="img/footer/IMAGE (3).svg" alt="2"></a>
+                            <a href="#" class="footer__link"><img src="img/footer/IMAGE (5).svg" alt="3"></a>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+         </footer>
+
+
     </div>
 </body>
 </html>
