--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
                             <li class="nav__item"><a href="">Sign in</a></li>
                             <li class="nav__item"><a href="">Get Started</a></li>
                         </ul>
+                        <ul class="burger-menu">
+                            <li class="burger-menu__line"></li>
+                            <li class="burger-menu__line"></li>
+                            <li class="burger-menu__line"></li>
+                        </ul>
                     </nav>
                 </header>
                 <div class="desk">
